--- a/index.html
+++ b/index.html
@@ -4,21 +4,28 @@
     <title>Threshold Homelessness Data Visualization</title>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css"href="styles.css">
+    <link
+  rel="stylesheet"
+  href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css"
+/>
 </head>
 
-<body>
-    <div class="loading"></div> 
-    <div class="content">
+<body class="ms-Fabric">
+    <div id="loading">Loading data ...</div> 
+    <div id="content" class="ms-font-m">
         <div>
-            <p>The cost of Homelessness in Ireland during <select name="year" id="year-select"
+            <p>The <span class="em">cost</span> of Homelessness in Ireland during <select name="year" id="year-select"
                     onchange="yearSelected(this)">
-                </select> is/was <span id="data-cost">N.A.</span></p>
+                </select> is/was <span class="em" id="data-cost">N.A.</span></p>
         </div>
         <div>
             <p>This cost is composed of
-            <p><span id="data-direct-cost"></span> of <a href="#" class="hoverTooltip">direct cost<span id="data-direct-cost-breakdown"></span></a></p>
-            <p><span id="data-indirect-cost"></span> of <a href="#" class="hoverTooltip">indirect cost<span id="data-indirect-cost-breakdown"></span></a></p>
+            <p><span id="data-direct-cost"></span> of <a href="" class="hoverTooltip">direct cost<span id="data-direct-cost-breakdown"></span></a>, and</p>
+            <p><span id="data-indirect-cost"></span> of <a href="" class="hoverTooltip">indirect cost<span id="data-indirect-cost-breakdown"></span></a>.</p>
             </p>
+        </div>
+        <div id="human-costs">
+            <p>And incalculable human cost, as per the following stories: <span id="link-list"></span></p>
         </div>
     </div>
 
