--- a/test-embed.html
+++ b/test-embed.html
@@ -47,10 +47,12 @@
         <div id="human-costs">
             <p>And incalculable human cost, as per the following stories: <span id="link-list"></span></p>
         </div>
-
         <h1>Relationship between rent prices and homelessness</h1>
-            <div id="legend"></div>
-            <div id="rent_vs_homelessness"></div>
-        </div>
-    <body>
+    </div>
+
+    <div id="embed1">
+        <div id="legend"></div>
+        <div id="rent_vs_homelessness"></div>
+    </div>
+<body>
 </html>
