--- a/rentalCost.html
+++ b/rentalCost.html
@@ -24,6 +24,10 @@
         // Legend.
         const legend_inspector = Inspector.into("#legend");
         (new Runtime).module(define, name => name === "viewof legend" ? legend_inspector() : undefined);
+
+        // Rent vs. Homelessness data.
+        const increase_inspector = Inspector.into("#increase");
+        (new Runtime).module(define, name => name === "viewof increase" ? increase_inspector() : undefined);
     </script>
 
 </head>
@@ -34,6 +38,7 @@
         <h1>Relationship between rent prices and homelessness</h1>
         <div id="legend"></div>
         <div id="rent_vs_homelessness"></div>
+        <div id="increase"></div>
     </div>
 
     <body>
