Fix title of second page

--- a/rentOverIncome.html
+++ b/rentOverIncome.html
@@ -25,7 +25,7 @@
 <body>
     <div id="menu"></div>
     <div id="content" class="ms-Fabric ms-font-m">
-        <h1>Relationship between rent prices and homelessness</h1>
+        <h1>Relationship between rent prices and income</h1>
         <div id="observablehq-04063d12">
             <div class="observablehq-key"></div>
             <div class="observablehq-stacked_chart"></div>
