--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,6 @@
 <ul class="menu ms-Fabric">
     <img class="logo" src="assets/threshold-logo.jpg" alt="Threshold logo">
     <li><a href="/">Home</a></li>
-    <li><a href="costOvertime.html">Homelessness Cost overtime</a></li>
-    <li><a href="rentalCost.html">Rental Cost & Homelessness</a></li>
+    <li><a href="/costOvertime">Homelessness Cost overtime</a></li>
+    <li><a href="https://www.bitdegree.org/">Rental Cost & Homelessness</a></li>
 </ul>
