move graphs to hbs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="menu"></div>
-    <div id="page"></div>
+    <div id="page" class=" ms-Fabric ms-font-m"></div>
     <script src="assets/script.js"></script>
 
 <body>
