--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
     <script src="assets/handelbars.js"></script>
+    <script src="assets/script.js"></script>
 </head>
 
 <body>
     <div id="menu"></div>
+    <div id="content">
+    <i class="ms-Icon ms-Icon--ChevronLeft" aria-hidden="true" title="previous" onclick="rotate(-1)"></i>
     <div id="page" class=" ms-Fabric ms-font-m"></div>
-    <script src="assets/script.js"></script>
-
+    <i class="ms-Icon ms-Icon--ChevronRight" aria-hidden="true" title="next" onclick="rotate(1)"></i>
+</div>
 <body>
 
 </html>
