--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
-    <script src="assets/handelbars.js"></script>
-    <script src="assets/script.js"></script>
+    <script src="assets/js/constants.js"></script>
+    <script src="assets/js/handelbars.js"></script>
+    <script src="assets/js/pages.js"></script>
+
 </head>
 
 <body>
